--- a/requirements.in
+++ b/requirements.in
@@ -1,1 +1,3 @@
 django==3.2                                   # web framework itself
+gunicorn==20.1.0                              # application server
+whitenoise==5.2.0                             # enabling Django to serve its own static files
