--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,14 @@ asgiref==3.3.4
     # via django
 django==3.2
     # via -r requirements.in
+gunicorn==20.1.0
+    # via -r requirements.in
 pytz==2021.1
     # via django
 sqlparse==0.4.1
     # via django
+whitenoise==5.2.0
+    # via -r requirements.in
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
