update docker-entrypoint to spawn a gunicorn process in production

--- a/.dockerignore
+++ b/.dockerignore
@@ -14,5 +14,6 @@
 # Allowed files
 #################################################
 !docker-entrypoint.sh
+!gunicorn.conf.py
 !manage.py
 !requirements*
