update project settings to use env vars for secret key and debug values

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,6 @@ services:
     ports:
       - "127.0.0.1:8000:8000"
     environment:
+      - DEBUG=true
       - DEV_SERVER=true
+      - DJANGO_SECRET_KEY=NotImportantHere
