--- a/requirements.in
+++ b/requirements.in
@@ -1,3 +1,5 @@
+dj-database-url==0.5.0                        # to be able to parse DATABASE_URL
 django==3.2                                   # web framework itself
 gunicorn==20.1.0                              # application server
+psycopg2-binary==2.8.6                        # postgres database adapter
 whitenoise==5.2.0                             # enabling Django to serve its own static files
