--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,13 @@
 #
 asgiref==3.3.4
     # via django
+dj-database-url==0.5.0
+    # via -r requirements.in
 django==3.2
     # via -r requirements.in
 gunicorn==20.1.0
+    # via -r requirements.in
+psycopg2-binary==2.8.6
     # via -r requirements.in
 pytz==2021.1
     # via django
