--- a/requirements-dev.in
+++ b/requirements-dev.in
@@ -1,3 +1,5 @@
 -c requirements.txt # Constrained by requirements.txt
 
 pip-tools==6.0.1                              # package management tool
+pytest-django==4.2.0                          # test runner integration with Django
+pytest==6.2.3                                 # test runner
