--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,14 +4,34 @@
 #
 #    pip-compile requirements-dev.in
 #
+attrs==20.3.0
+    # via pytest
 click==7.1.2
     # via pip-tools
+iniconfig==1.1.1
+    # via pytest
+packaging==20.9
+    # via pytest
 pep517==0.10.0
     # via pip-tools
 pip-tools==6.0.1
     # via -r requirements-dev.in
+pluggy==0.13.1
+    # via pytest
+py==1.10.0
+    # via pytest
+pyparsing==2.4.7
+    # via packaging
+pytest-django==4.2.0
+    # via -r requirements-dev.in
+pytest==6.2.3
+    # via
+    #   -r requirements-dev.in
+    #   pytest-django
 toml==0.10.2
-    # via pep517
+    # via
+    #   pep517
+    #   pytest
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
