--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,22 +4,56 @@
 #
 #    pip-compile requirements-dev.in
 #
+appdirs==1.4.4
+    # via
+    #   black
+    #   virtualenv
 attrs==20.3.0
     # via pytest
+black==20.8b1
+    # via -r requirements-dev.in
+cfgv==3.2.0
+    # via pre-commit
 click==7.1.2
-    # via pip-tools
+    # via
+    #   black
+    #   pip-tools
+distlib==0.3.1
+    # via virtualenv
+filelock==3.0.12
+    # via virtualenv
+flake8==3.9.1
+    # via -r requirements-dev.in
+identify==2.2.4
+    # via pre-commit
 iniconfig==1.1.1
     # via pytest
+isort==5.8.0
+    # via -r requirements-dev.in
+mccabe==0.6.1
+    # via flake8
+mypy-extensions==0.4.3
+    # via black
+nodeenv==1.6.0
+    # via pre-commit
 packaging==20.9
     # via pytest
+pathspec==0.8.1
+    # via black
 pep517==0.10.0
     # via pip-tools
 pip-tools==6.0.1
     # via -r requirements-dev.in
 pluggy==0.13.1
     # via pytest
+pre-commit==2.12.1
+    # via -r requirements-dev.in
 py==1.10.0
     # via pytest
+pycodestyle==2.7.0
+    # via flake8
+pyflakes==2.3.1
+    # via flake8
 pyparsing==2.4.7
     # via packaging
 pytest-django==4.2.0
@@ -28,10 +62,24 @@ pytest==6.2.3
     # via
     #   -r requirements-dev.in
     #   pytest-django
+pyyaml==5.4.1
+    # via pre-commit
+regex==2021.4.4
+    # via black
+six==1.15.0
+    # via virtualenv
 toml==0.10.2
     # via
+    #   black
     #   pep517
+    #   pre-commit
     #   pytest
+typed-ast==1.4.3
+    # via black
+typing-extensions==3.7.4.3
+    # via black
+virtualenv==20.4.4
+    # via pre-commit
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
