--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,10 +23,14 @@ services:
       - "127.0.0.1:8000:8000"
     environment:
       - APPLY_MIGRATIONS=true
+      - CREATE_SUPERUSER=true
       - DATABASE_URL=postgres://my_postgres_user:my_postgres_password@database:5432/my_postgres_db
       - DEBUG=true
       - DEV_SERVER=true
       - DJANGO_SECRET_KEY=NotImportantHere
+      - DJANGO_SUPERUSER_EMAIL=admin@kool-kids.com
+      - DJANGO_SUPERUSER_PASSWORD=coconut
+      - DJANGO_SUPERUSER_USERNAME=admin
       - INSTALL_PRECOMMIT=true
       - WAIT_FOR_IT_ADDRESS=database:5432
 
