--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,11 @@
 [tool.black]
 target-version = ['py39']
 line-length    = 88        # Black's default value
+extend-exclude = '''
+/(
+  | migrations
+)/
+'''
 
 [tool.isort]
 # Compliance with Black is supported simply by using 'black' profile
