--- a/requirements.in
+++ b/requirements.in
@@ -1,3 +1,4 @@
+ariadne==0.13.0                               # schema-first graphql server implementation
 dj-database-url==0.5.0                        # to be able to parse DATABASE_URL
 django==3.2                                   # web framework itself
 gunicorn==20.1.0                              # application server
