--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,16 @@
 #
 #    pip-compile requirements.in
 #
+ariadne==0.13.0
+    # via -r requirements.in
 asgiref==3.3.4
     # via django
 dj-database-url==0.5.0
     # via -r requirements.in
 django==3.2
     # via -r requirements.in
+graphql-core==3.1.4
+    # via ariadne
 gunicorn==20.1.0
     # via -r requirements.in
 psycopg2-binary==2.8.6
@@ -18,6 +22,10 @@ pytz==2021.1
     # via django
 sqlparse==0.4.1
     # via django
+starlette==0.14.2
+    # via ariadne
+typing-extensions==3.7.4.3
+    # via ariadne
 whitenoise==5.2.0
     # via -r requirements.in
 
