--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - "127.0.0.1:5555:5432"
 
-  api:
+  graphql-api:
     build:
       context: .
       target: development_stage
