--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,22 +8,34 @@ appdirs==1.4.4
     # via
     #   black
     #   virtualenv
-attrs==20.3.0
+ariadne==0.13.0
+    # via -r requirements.in
+asgiref==3.3.4
+    # via django
+attrs==21.2.0
     # via pytest
 black==21.4b0
     # via -r requirements-dev.in
 cfgv==3.2.0
     # via pre-commit
-click==7.1.2
+click==8.0.0
     # via
     #   black
     #   pip-tools
 distlib==0.3.1
     # via virtualenv
+dj-database-url==0.5.0
+    # via -r requirements.in
+django==3.2
+    # via -r requirements.in
 filelock==3.0.12
     # via virtualenv
 flake8==3.9.1
     # via -r requirements-dev.in
+graphql-core==3.1.5
+    # via ariadne
+gunicorn==20.1.0
+    # via -r requirements.in
 identify==2.2.4
     # via pre-commit
 iniconfig==1.1.1
@@ -48,6 +60,8 @@ pluggy==0.13.1
     # via pytest
 pre-commit==2.12.1
     # via -r requirements-dev.in
+psycopg2-binary==2.8.6
+    # via -r requirements.in
 py==1.10.0
     # via pytest
 pycodestyle==2.7.0
@@ -62,20 +76,31 @@ pytest==6.2.3
     # via
     #   -r requirements-dev.in
     #   pytest-django
+pytz==2021.1
+    # via django
 pyyaml==5.4.1
     # via pre-commit
 regex==2021.4.4
     # via black
-six==1.15.0
+six==1.16.0
     # via virtualenv
+sqlparse==0.4.1
+    # via django
+starlette==0.14.2
+    # via ariadne
 toml==0.10.2
     # via
     #   black
     #   pep517
     #   pre-commit
     #   pytest
-virtualenv==20.4.4
+typing-extensions==3.10.0.0
+    # via ariadne
+virtualenv==20.4.6
     # via pre-commit
+whitenoise==5.2.0
+    # via -r requirements.in
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
+# setuptools
