update parking-permits-database service name value in .env.example

--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ CONN_MAX_AGE=0
 
 # Configures database for Parking Permits using URL style. Format is:
 # postgis://USER:PASSWORD@HOST:PORT/DBNAME
-#DATABASE_URL=postgis://parking_permits_user:parking_permits_password@db:5432/parking_permits_db
+DATABASE_URL=postgis://parking_permits_user:parking_permits_password@parking-permits-database:5432/parking_permits_db
 
 # Jwt token authentication, not yet in use. This settings Specifies
 # the value that must be present in the "aud"-key of the token presented
@@ -119,4 +119,4 @@ DJANGO_SUPERUSER_EMAIL=admin@kool-kids.com
 DJANGO_SUPERUSER_PASSWORD=coconut
 DJANGO_SUPERUSER_USERNAME=admin
 INSTALL_PRECOMMIT=True
-WAIT_FOR_IT_ADDRESS=db:5432
+WAIT_FOR_IT_ADDRESS=parking-permits-database:5432
