--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,10 @@ asgiref==3.3.4
 dj-database-url==0.5.0
     # via -r requirements.in
 django==3.2
+    # via
+    #   -r requirements.in
+    #   djangorestframework
+djangorestframework==3.12.4
     # via -r requirements.in
 graphql-core==3.1.5
     # via ariadne
