--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - "127.0.0.1:5555:5432"
 
-  graphql-api:
+  parking-permits-api:
     image: parking_permits_api
     build:
       context: ./
