--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 
 services:
-  parking-permits-database:
+  database:
     image: postgis/postgis:13-3.1
     volumes:
       - database-volume:/var/lib/postgresql/data
@@ -11,8 +11,9 @@ services:
       POSTGRES_PASSWORD: parking_permits_password
     ports:
       - "127.0.0.1:5555:5432"
+    container_name: parking-permits-database
 
-  parking-permits-api:
+  api:
     image: parking_permits_api
     build:
       context: ./
@@ -28,6 +29,7 @@ services:
       - .:/app:cached
     ports:
       - "127.0.0.1:8888:8888"
+    container_name: parking-permits-api
 
 volumes:
   database-volume: {}
