--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ asgiref==3.3.4
     # via django
 dj-database-url==0.5.0
     # via -r requirements.in
+django-environ==0.4.5
+    # via -r requirements.in
 django==3.2
     # via
     #   -r requirements.in
