--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,12 @@ dj-database-url==0.5.0
     # via -r requirements.in
 django-environ==0.4.5
     # via -r requirements.in
+django-extensions==3.1.3
+    # via -r requirements.in
 django==3.2
     # via
     #   -r requirements.in
+    #   django-extensions
     #   djangorestframework
 djangorestframework==3.12.4
     # via -r requirements.in
