--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,8 +8,6 @@ appdirs==1.4.4
     # via
     #   black
     #   virtualenv
-attrs==21.2.0
-    # via pytest
 black==21.4b0
     # via -r requirements-dev.in
 cfgv==3.3.0
@@ -26,8 +24,13 @@ flake8==3.9.1
     # via -r requirements-dev.in
 identify==2.2.10
     # via pre-commit
-iniconfig==1.1.1
-    # via pytest
+importlib-metadata==4.5.0
+    # via
+    #   click
+    #   flake8
+    #   pep517
+    #   pre-commit
+    #   virtualenv
 isort==5.8.0
     # via -r requirements-dev.in
 mccabe==0.6.1
@@ -36,32 +39,18 @@ mypy-extensions==0.4.3
     # via black
 nodeenv==1.6.0
     # via pre-commit
-packaging==20.9
-    # via pytest
 pathspec==0.8.1
     # via black
 pep517==0.10.0
     # via pip-tools
 pip-tools==6.1.0
     # via -r requirements-dev.in
-pluggy==0.13.1
-    # via pytest
 pre-commit==2.12.1
     # via -r requirements-dev.in
-py==1.10.0
-    # via pytest
 pycodestyle==2.7.0
     # via flake8
 pyflakes==2.3.1
     # via flake8
-pyparsing==2.4.7
-    # via packaging
-pytest-django==4.2.0
-    # via -r requirements-dev.in
-pytest==6.2.3
-    # via
-    #   -r requirements-dev.in
-    #   pytest-django
 pyyaml==5.4.1
     # via pre-commit
 regex==2021.4.4
@@ -73,9 +62,18 @@ toml==0.10.2
     #   black
     #   pep517
     #   pre-commit
-    #   pytest
+typed-ast==1.4.3
+    # via black
+typing-extensions==3.10.0.0
+    # via
+    #   black
+    #   importlib-metadata
 virtualenv==20.4.7
     # via pre-commit
+zipp==3.4.1
+    # via
+    #   importlib-metadata
+    #   pep517
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
