Add missing module requests to requirements
Refs None

--- a/requirements.in
+++ b/requirements.in
@@ -6,4 +6,5 @@ django==3.2                                   # web framework itself
 djangorestframework==3.12.4                   # creating rest APIs
 gunicorn==20.1.0                              # application server
 psycopg2-binary==2.8.6                        # postgres database adapter
+requests
 whitenoise==5.2.0                             # enabling Django to serve its own static files
