add BOOTSTRAP_PARKING_PERMITS env var to docker-entrypoint.sh

--- a/.env.example
+++ b/.env.example
@@ -111,6 +111,7 @@ INTERNAL_IPS=127.0.0.1
 # Do not set in production or openshift/kubernetes environments.
 #REDHAT_PASSWORD=
 
+BOOTSTRAP_PARKING_PERMITS=True
 CREATE_SUPERUSER=True
 DEV_SERVER=True
 DJANGO_SECRET_KEY=NotImportantHere
