--- a/requirements.in
+++ b/requirements.in
@@ -1,7 +1,8 @@
 ariadne==0.13.0                               # schema-first graphql server implementation
+arrow==1.1.1                                  # human-friendly date and time library in Python
 dj-database-url==0.5.0                        # to be able to parse DATABASE_URL
-django-extensions==3.1.3
 django-environ==0.4.5                         # Read .env file
+django-extensions==3.1.3
 django==3.2                                   # web framework itself
 djangorestframework==3.12.4                   # creating rest APIs
 gunicorn==20.1.0                              # application server
