--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@
 #
 ariadne==0.13.0
     # via -r requirements.in
+arrow==1.1.1
+    # via -r requirements.in
 asgiref==3.3.4
     # via django
 certifi==2021.5.30
@@ -33,10 +35,14 @@ idna==2.10
     # via requests
 psycopg2-binary==2.8.6
     # via -r requirements.in
+python-dateutil==2.8.2
+    # via arrow
 pytz==2021.1
     # via django
 requests==2.25.1
     # via -r requirements.in
+six==1.16.0
+    # via python-dateutil
 sqlparse==0.4.1
     # via django
 starlette==0.14.2
