--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,8 @@ urllib3==1.26.6
     # via requests
 whitenoise==5.2.0
     # via -r requirements.in
+xmltodict==0.12.0
+    # via -r requirements.in
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
