--- a/requirements.in
+++ b/requirements.in
@@ -11,3 +11,4 @@ requests
 django-cors-headers
 whitenoise==5.2.0                             # enabling Django to serve its own static files
 xmltodict==0.12.0                             # parsing xml to dictionary
+pyjwt
