Add JWT_SECRET to env files
Refs PV-235

--- a/.env.example
+++ b/.env.example
@@ -120,3 +120,6 @@ DJANGO_SUPERUSER_PASSWORD=coconut
 DJANGO_SUPERUSER_USERNAME=admin
 INSTALL_PRECOMMIT=True
 WAIT_FOR_IT_ADDRESS=parking-permits-database:5432
+
+# Secret for encoding a jwt token and checking its validity
+JWT_SECRET=TEST
