--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,16 @@ ariadne==0.13.0
     # via -r requirements.in
 arrow==1.1.1
     # via -r requirements.in
-asgiref==3.3.4
+asgiref==3.4.1
     # via django
+cachetools==4.2.2
+    # via django-helusers
 certifi==2021.5.30
     # via requests
-chardet==4.0.0
+charset-normalizer==2.0.6
     # via requests
+deprecation==2.1.0
+    # via django-helusers
 dj-database-url==0.5.0
     # via -r requirements.in
 django-cors-headers==3.8.0
@@ -22,41 +26,59 @@ django-environ==0.4.5
     # via -r requirements.in
 django-extensions==3.1.3
     # via -r requirements.in
+django-helusers==0.7.0
+    # via -r requirements.in
 django==3.2
     # via
     #   -r requirements.in
     #   django-cors-headers
     #   django-extensions
+    #   django-helusers
     #   djangorestframework
 djangorestframework==3.12.4
     # via -r requirements.in
-graphql-core==3.1.5
+ecdsa==0.17.0
+    # via python-jose
+graphql-core==3.1.6
     # via ariadne
 gunicorn==20.1.0
     # via -r requirements.in
-idna==2.10
+idna==3.2
     # via requests
+packaging==21.0
+    # via deprecation
 psycopg2-binary==2.8.6
     # via -r requirements.in
+pyasn1==0.4.8
+    # via
+    #   python-jose
+    #   rsa
 pyjwt==2.1.0
     # via -r requirements.in
+pyparsing==2.4.7
+    # via packaging
 python-dateutil==2.8.2
     # via arrow
+python-jose==3.3.0
+    # via django-helusers
 pytz==2021.1
     # via django
-requests==2.25.1
-    # via -r requirements.in
+requests==2.26.0
+    # via
+    #   -r requirements.in
+    #   django-helusers
+rsa==4.7.2
+    # via python-jose
 six==1.16.0
-    # via python-dateutil
-sqlparse==0.4.1
+    # via
+    #   ecdsa
+    #   python-dateutil
+sqlparse==0.4.2
     # via django
 starlette==0.14.2
     # via ariadne
-typing-extensions==3.10.0.0
-    # via
-    #   ariadne
-    #   arrow
-    #   asgiref
+typing-extensions==3.10.0.2
+    # via ariadne
 urllib3==1.26.6
     # via requests
 whitenoise==5.2.0
