Add OIDC auth env variables to env.example (#69)
* Add Admin UI env variables to env.example

* Update comment

These settings are used for both admin and resident app

Co-authored-by: Mingfeng Yu <mingfeng@users.noreply.github.com>

--- a/.env.example
+++ b/.env.example
@@ -123,3 +123,9 @@ WAIT_FOR_IT_ADDRESS=parking-permits-database:5432
 
 # Secret for encoding a jwt token and checking its validity
 JWT_SECRET=TEST
+
+# OIDC auth settings
+TOKEN_AUTH_ACCEPTED_AUDIENCE=https://api.hel.fi/auth/parkingpermits
+TOKEN_AUTH_ACCEPTED_SCOPE_PREFIX=parkingpermits
+TOKEN_AUTH_AUTHSERVER_URL=https://tunnistamo.test.hel.ninja/openid
+TOKEN_AUTH_REQUIRE_SCOPE_PREFIX=True
