--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,76 +4,38 @@
 #
 #    pip-compile requirements-dev.in
 #
-appdirs==1.4.4
-    # via
-    #   black
-    #   virtualenv
-black==21.4b0
-    # via -r requirements-dev.in
-cfgv==3.3.0
-    # via pre-commit
-click==8.0.1
-    # via
-    #   black
-    #   pip-tools
-distlib==0.3.2
+backports.entry-points-selectable==1.1.0
     # via virtualenv
-filelock==3.0.12
-    # via virtualenv
-flake8==3.9.1
-    # via -r requirements-dev.in
-identify==2.2.10
+cfgv==3.3.1
     # via pre-commit
-importlib-metadata==4.5.0
-    # via
-    #   click
-    #   flake8
-    #   pep517
-    #   pre-commit
-    #   virtualenv
-isort==5.8.0
-    # via -r requirements-dev.in
-mccabe==0.6.1
-    # via flake8
-mypy-extensions==0.4.3
-    # via black
+click==8.0.3
+    # via pip-tools
+distlib==0.3.3
+    # via virtualenv
+filelock==3.3.0
+    # via virtualenv
+identify==2.3.0
+    # via pre-commit
 nodeenv==1.6.0
     # via pre-commit
-pathspec==0.8.1
-    # via black
-pep517==0.10.0
+pep517==0.11.0
     # via pip-tools
 pip-tools==6.1.0
     # via -r requirements-dev.in
+platformdirs==2.4.0
+    # via virtualenv
 pre-commit==2.12.1
     # via -r requirements-dev.in
-pycodestyle==2.7.0
-    # via flake8
-pyflakes==2.3.1
-    # via flake8
 pyyaml==5.4.1
     # via pre-commit
-regex==2021.4.4
-    # via black
 six==1.16.0
     # via virtualenv
 toml==0.10.2
-    # via
-    #   black
-    #   pep517
-    #   pre-commit
-typed-ast==1.4.3
-    # via black
-typing-extensions==3.10.0.0
-    # via
-    #   black
-    #   importlib-metadata
-virtualenv==20.4.7
     # via pre-commit
-zipp==3.4.1
-    # via
-    #   importlib-metadata
-    #   pep517
+tomli==1.2.1
+    # via pep517
+virtualenv==20.8.1
+    # via pre-commit
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
