--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -4,55 +4,73 @@
 #
 #    pip-compile requirements-test.in
 #
+appdirs==1.4.4
+    # via black
 attrs==21.2.0
     # via pytest
-certifi==2021.5.30
+black==21.4b0
+    # via -r requirements-test.in
+certifi==2021.10.8
     # via requests
-chardet==4.0.0
+charset-normalizer==2.0.7
     # via requests
-coverage==5.5
+click==8.0.3
+    # via black
+coverage[toml]==6.0.2
     # via pytest-cov
 factory-boy==3.2.0
     # via
     #   -r requirements-test.in
     #   pytest-factoryboy
-faker==8.8.1
+faker==9.3.1
     # via factory-boy
-idna==2.10
+flake8==3.9.1
+    # via -r requirements-test.in
+idna==3.2
     # via requests
-importlib-metadata==4.5.0
-    # via
-    #   pluggy
-    #   pytest
 inflection==0.5.1
     # via pytest-factoryboy
 iniconfig==1.1.1
     # via pytest
-packaging==20.9
+isort==5.8.0
+    # via -r requirements-test.in
+mccabe==0.6.1
+    # via flake8
+mypy-extensions==0.4.3
+    # via black
+packaging==21.0
     # via pytest
-pluggy==0.13.1
+pathspec==0.9.0
+    # via black
+pluggy==1.0.0
     # via pytest
 py==1.10.0
     # via pytest
+pycodestyle==2.7.0
+    # via flake8
+pyflakes==2.3.1
+    # via flake8
 pyparsing==2.4.7
     # via packaging
-pytest-cov==2.12.1
+pytest-cov==3.0.0
     # via -r requirements-test.in
 pytest-django==4.4.0
     # via -r requirements-test.in
 pytest-factoryboy==2.1.0
     # via -r requirements-test.in
-pytest==6.2.4
+pytest==6.2.5
     # via
     #   -r requirements-test.in
     #   pytest-cov
     #   pytest-django
     #   pytest-factoryboy
-python-dateutil==2.8.1
+python-dateutil==2.8.2
     # via faker
+regex==2021.10.8
+    # via black
 requests-mock==1.9.3
     # via -r requirements-test.in
-requests==2.25.1
+requests==2.26.0
     # via requests-mock
 six==1.16.0
     # via
@@ -62,11 +80,9 @@ text-unidecode==1.3
     # via faker
 toml==0.10.2
     # via
+    #   black
     #   pytest
-    #   pytest-cov
-typing-extensions==3.10.0.0
-    # via importlib-metadata
-urllib3==1.26.5
+tomli==1.2.1
+    # via coverage
+urllib3==1.26.7
     # via requests
-zipp==3.4.1
-    # via importlib-metadata
