Update GHA-tests config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,10 @@
-name: Run tests
+name: Continuous Integration
 
 on:
+  push:
+    branches: [ develop, main ]
   pull_request:
-    types: [opened, synchronize, reopened]
+    branches: [ develop, main ]
 
 jobs:
   build:
