--- a/requirements.in
+++ b/requirements.in
@@ -12,3 +12,4 @@ django-cors-headers
 whitenoise==5.2.0                             # enabling Django to serve its own static files
 xmltodict==0.12.0                             # parsing xml to dictionary
 django-helusers
+django-reversion
