--- a/requirements.txt
+++ b/requirements.txt
@@ -28,12 +28,15 @@ django-extensions==3.1.3
     # via -r requirements.in
 django-helusers==0.7.0
     # via -r requirements.in
+django-reversion==4.0.0
+    # via -r requirements.in
 django==3.2
     # via
     #   -r requirements.in
     #   django-cors-headers
     #   django-extensions
     #   django-helusers
+    #   django-reversion
     #   djangorestframework
 djangorestframework==3.12.4
     # via -r requirements.in
@@ -53,7 +56,7 @@ pyasn1==0.4.8
     # via
     #   python-jose
     #   rsa
-pyparsing==2.4.7
+pyparsing==3.0.1
     # via packaging
 python-dateutil==2.8.2
     # via arrow
