--- a/requirements.txt
+++ b/requirements.txt
@@ -10,17 +10,19 @@ arrow==1.1.1
     # via -r requirements.in
 asgiref==3.4.1
     # via django
-cachetools==4.2.4
+cachetools==5.0.0
     # via django-helusers
 certifi==2021.10.8
     # via requests
-charset-normalizer==2.0.7
+charset-normalizer==2.0.10
     # via requests
 deprecation==2.1.0
     # via django-helusers
 dj-database-url==0.5.0
     # via -r requirements.in
-django-cors-headers==3.10.0
+django-cors-headers==3.10.1
+    # via -r requirements.in
+django-db-logger==0.1.11
     # via -r requirements.in
 django-environ==0.4.5
     # via -r requirements.in
@@ -28,12 +30,13 @@ django-extensions==3.1.3
     # via -r requirements.in
 django-helusers==0.7.0
     # via -r requirements.in
-django-reversion==4.0.0
+django-reversion==4.0.1
     # via -r requirements.in
 django==3.2
     # via
     #   -r requirements.in
     #   django-cors-headers
+    #   django-db-logger
     #   django-extensions
     #   django-helusers
     #   django-reversion
@@ -42,13 +45,13 @@ djangorestframework==3.12.4
     # via -r requirements.in
 ecdsa==0.17.0
     # via python-jose
-graphql-core==3.1.6
+graphql-core==3.1.7
     # via ariadne
 gunicorn==20.1.0
     # via -r requirements.in
 idna==3.3
     # via requests
-packaging==21.0
+packaging==21.3
     # via deprecation
 psycopg2-binary==2.8.6
     # via -r requirements.in
@@ -56,7 +59,7 @@ pyasn1==0.4.8
     # via
     #   python-jose
     #   rsa
-pyparsing==3.0.1
+pyparsing==3.0.6
     # via packaging
 python-dateutil==2.8.2
     # via arrow
@@ -64,22 +67,26 @@ python-jose==3.3.0
     # via django-helusers
 pytz==2021.3
     # via django
-requests==2.26.0
+requests==2.27.1
     # via
     #   -r requirements.in
     #   django-helusers
-rsa==4.7.2
+rsa==4.8
     # via python-jose
 six==1.16.0
     # via
+    #   django-db-logger
     #   ecdsa
     #   python-dateutil
 sqlparse==0.4.2
     # via django
 starlette==0.14.2
     # via ariadne
-typing-extensions==3.10.0.2
-    # via ariadne
+typing-extensions==4.0.1
+    # via
+    #   ariadne
+    #   arrow
+    #   asgiref
 urllib3==1.26.7
     # via requests
 whitenoise==5.2.0
