--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ ariadne==0.13.0
     # via -r requirements.in
 arrow==1.1.1
     # via -r requirements.in
-asgiref==3.4.1
+asgiref==3.5.0
     # via django
 cachetools==5.0.0
     # via django-helusers
@@ -28,7 +28,9 @@ dj-database-url==0.5.0
     # via -r requirements.in
 django-cors-headers==3.11.0
     # via -r requirements.in
-django-db-logger==0.1.11
+django-crontab==0.7.1
+    # via -r requirements.in
+django-db-logger==0.1.12
     # via -r requirements.in
 django-environ==0.4.5
     # via -r requirements.in
@@ -42,6 +44,7 @@ django==3.2
     # via
     #   -r requirements.in
     #   django-cors-headers
+    #   django-crontab
     #   django-db-logger
     #   django-extensions
     #   django-helusers
@@ -80,7 +83,7 @@ pyasn1==0.4.8
     # via
     #   python-jose
     #   rsa
-pyparsing==3.0.6
+pyparsing==3.0.7
     # via packaging
 python-dateutil==2.8.2
     # via arrow
