Add DVV integration environment variables to .env.example file

--- a/.env.example
+++ b/.env.example
@@ -126,3 +126,10 @@ TOKEN_AUTH_ACCEPTED_AUDIENCE=https://api.hel.fi/auth/parkingpermits
 TOKEN_AUTH_ACCEPTED_SCOPE_PREFIX=parkingpermits
 TOKEN_AUTH_AUTHSERVER_URL=https://tunnistamo.test.hel.ninja/openid
 TOKEN_AUTH_REQUIRE_SCOPE_PREFIX=True
+
+# DVV integration
+DVV_PERSONAL_INFO_URL=
+DVV_USERNAME=
+DVV_PASSWORD=
+DVV_SOSONIMI=
+DVV_LOPPUKAYTTAJA=
